# LAN_Voice_Chat

./: .gitmodules  CMakeLists.txt
Client/: CMakeLists.txt  Main.cpp
Client/include/Application/: Application.h
Client/source/Application/: Application.cpp
LVC_Client/: CMakeLists.txt
LVC_Client/include/: Application.h  Network_Manager.h  Player.h  Recorder.h  Settings.h  Voice_Package_Queue.h
LVC_Client/source/: Application.cpp  Network_Manager.cpp  Player.cpp  Recorder.cpp  Voice_Package_Queue.cpp
LVC_Common/: CMakeLists.txt
LVC_Common/Include/: Common_Constants.h  Package_Header.h  Utility.h
LVC_Common/source/: Utility.cpp
LVC_Server/: CMakeLists.txt  Main.cpp
LVC_Server/include/: Application.h  Client_Manager.h  Network_Manager.h
LVC_Server/source/: Application.cpp  Client_Manager.cpp  Network_Manager.cpp
Server/: CMakeLists.txt
Server/source/Application/: Application.cpp
include/Application/: Application.h
source/Application/: Application.cpp
